Corrects scroll overflow

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
   max-width: 600px;
   font-family: 'Open Sans', sans-serif;
   padding: 0 1rem;
+  overflow-y: overlay;
 }
 .img-wrapper{
   width: 100%;
@@ -38,7 +39,7 @@ body {
 }
 /*experimental highlight feature*/
 .remaining-text{
-  /* color: grey; */
+  color: grey;
 }
 .wikipedia-button {
   color:inherit;
